--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Miscellaneous Files
 *Icon?
 *.DS_Store
+
+# Workspace
+CSE167FinalProject/CSE167FinalProject.xcodeproj/project.xcworkspace/xcuserdata/
