--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 *.DS_Store
 
 # Workspace
+CSE167FinalProject/CSE167FinalProject.xcodeproj/xcuserdata/
 CSE167FinalProject/CSE167FinalProject.xcodeproj/project.xcworkspace/xcuserdata/
