--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,4 @@
 *.DS_Store
 
 # Workspace
-CSE167FinalProject/CSE167FinalProject.xcodeproj/xcuserdata/
-CSE167FinalProject/CSE167FinalProject.xcodeproj/project.xcworkspace/xcuserdata/
+CSE167FinalProject.xcodeproj/
