ignore workspace settings
Signed-off-by: Abi Sarvepalli <abisarvepalli@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 */*.DS_Store
 
 # Workspace files
+CSE167FinalProject/CSE167FinalProject.xcodeproj/xcshareddata/
 CSE167FinalProject/CSE167FinalProject.xcodeproj/project.xcworkspace/xcuserdata/
+CSE167FinalProject/CSE167FinalProject.xcodeproj/project.xcworkspace/xcshareddata/
